# src/configs/swagger.json
@@ -490,7 +490,7 @@
     "/reservations/": {
       "get": {
         "tags": [
-          "Reservation"
+          "Reservations"
         ],
         "summary": "List Reservation",
         "description": "  You can send query with endpoint for filter[], search[], sort[], page and limit.  <ul> Examples:   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>   <li>URL/?<b>page=2&limit=1</b></li>  </ul>  ",
@@ -526,7 +526,7 @@
     "/reservations/{id}": {
       "get": {
         "tags": [
-          "Reservation"
+          "Reservations"
         ],
         "summary": "Get Single Reservation",
         "description": "",
